<resources>
    <string name="app_name">Books Firebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">delete</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="book_description">Book Description</string>
    <string name="add_update">Add/Update</string>
</resources>