<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_book_item_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="50dp"
            android:text="@string/title"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/author_text_view"/>

        <TextView
            android:id="@+id/author_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="1"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="50dp"
            android:text="@string/author"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text_view"
            app:layout_constraintBottom_toTopOf="@id/description_text_view"/>

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:inputType="none"
            android:maxLines="3"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/author_text_view"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/delete"
            android:background="@drawable/shape_button_background"
            android:textSize="12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text_view"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>