<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <RelativeLayout
        android:id="@+id/layout_add_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/book_title_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:autofillHints="title"
            android:hint="@string/book_title"
            android:inputType="text"
            android:maxLength="100"
            android:paddingVertical="10dp" />

        <EditText
            android:id="@+id/book_author_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_title_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:autofillHints="author"
            android:hint="@string/book_author"
            android:inputType="text"
            android:maxLength="100"
            android:paddingVertical="10dp" />

        <EditText
            android:id="@+id/book_description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/book_author_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:autofillHints="description"
            android:hint="@string/book_description"
            android:inputType="text"
            android:maxLength="1000"
            android:paddingVertical="10dp" />

        <Button
            android:id="@+id/add_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_description_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/shape_button_background"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/add_update"
            android:textColor="@color/white" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/books_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/layout_add_book"
        tools:listitem="@layout/book_item" />

</androidx.constraintlayout.widget.ConstraintLayout>